osmpbf-file-downloader-derive/tests/ui/fail_unit_variant_no_link.stderr
error: Missing or invalid #[geofabrik(continent="region-latest.osm.pbf")]
 --> tests/ui/fail_unit_variant_no_link.rs:7:5
  |
7 |     VariantOne,
  |     ^^^^^^^^^^

error: `match` arm with no body
 --> tests/ui/fail_unit_variant_no_link.rs:7:5
  |
7 |     VariantOne,
  |     ^^^^^^^^^^- help: add a body after the pattern: `=> todo!(),`
